[package]
name = "poulpe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
clap = "3.2.6"
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.23", features = ["tokio-comp"] }
chrono = "0.4.19"
cron = "0.5.0"
timer = "0.2.0"
#lettre = "0.10.4"
lettre = { version = "0.10.4", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }
dirs = "3.0.2"
reqwest = { version = "0.11.23",  default-features = false, features = ["blocking", "json", "rustls-tls"] }
rdkafka = { version = "0.33.2", default-features = false, features = ["cmake-build"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }